# crew-ai-101

./: Dockerfile  main.py  makefile  pyproject.toml  xreadme.md
.github/workflows/: build.yaml
