[tool.poetry]
name = "crew-ai-101"
version = "0.1.0"
description = ""
authors = ["panachainy <panachai.ny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = "^0.22.5"
crewai-tools = "^0.1.0"
duckduckgo-search = "^5.1.0"
langchain-community = "^0.0.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
